--- a/wp-content/themes/blank/style.css
+++ b/wp-content/themes/blank/style.css
@@ -2674,6 +2674,7 @@ p.comment-form-comment {
 
 
 /*------------------------------------blank header------------------------------------------------*/
+*, html, body{ font-family:Helvetica, Arial, Helvetica, sans-serif; font-size:12px;;}
 #header{  width:960px; position:relative; }
 #header .left_block, #header .right_block{width:6px; height:92px; display:block;position:absolute;}
 #header .left_block{ background:#e6e6e6;  left:0px; top:0px;}
@@ -2695,4 +2696,23 @@ p.comment-form-comment {
 .clear{clear:both;float:none;}
 
 .location{ padding-left:327px; color:#666666; font-size:12px;}
+
+
+/*---------------siderbar------------------------*/
+.left-sidebar{
+	float:left;
+	width:258px;
+	padding-left:15px;
+	padding-right:15px;
+}
+
+.widget-block{ float:left;background:#fff;clear:both; float:left; height:auto; width:220px; padding-bottom:15px;}
+.widget-block-topline{ height:5px; background:#e6e6e6;}
+.sidebar-social{}
+.widget-title{text-transform:none; height:40px;font-family:Helvetica, Arial, Helvetica, sans-serif;font-size:12px; }
+.widget-wrap{ padding-left:14px; padding-top:5px; float:left;}
+
+.social-spacing{ height:20px;}
+
+
 
